recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:5: error: recursive method spiral needs result type
    spiral(steps-1, angle, length + increment, increment)
    ^